--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,13 @@
 .home {
   background-color: #cfcfcf00;
+  display: grid;
+
+  justify-items: center;
+  grid-template-rows: [header-s] 218px [header-e card-s] minmax(736px, 994px) [card-e];
+}
+
+.header {
+  align-self: center;
 }
 
 .card {
@@ -10,24 +18,32 @@
   
   display: grid;
   grid-template-rows: 1fr 50px;
+  
 
   &__inputs {
     background-color: skyblue;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    align-items: center;
   }
 
 }
 
 .input {
-  &title {
-
+  display: grid;
+  grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
+  
+  &__title {
+    grid-column: input-s/input-e;
   }
+  
   input {
-
+    grid-column: input-s/input-e;
   }
+ 
   &__number {
-
+    grid-column: number-s/number-e;
   }
 }
