--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,5 @@
 .home {
+  position: relative;
   background-color: #cfcfcf00;
   display: grid;
 
@@ -8,6 +9,29 @@
 
 .header {
   align-self: center;
+
+  &__skew {
+    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+    clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    position: absolute;
+    height: 150vh;
+    width: 100vw;
+    background-color: #444444;
+  }
+  &__border {
+    -webkit-clip-path: polygon(0 48%, 100% 23%, 100% 25%, 0 50%);
+    clip-path: polygon(0 48%, 100% 23%, 100% 25%, 0 50%);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    position: absolute;
+    height: 150vh;
+    width: 100vw;
+    background-color: #00cb79;
+  }
 }
 
 .card {
