--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,7 +9,9 @@
 
 .header {
   align-self: center;
-
+  font-family: 'Montserrat';
+  color: white;
+  text-align: center;
   &__skew {
     -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
     clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
@@ -17,7 +19,7 @@
     left: 0;
     z-index: -1;
     position: absolute;
-    height: 150vh;
+    height: 110vh;
     width: 100vw;
     background-color: #444444;
   }
@@ -28,9 +30,22 @@
     left: 0;
     z-index: -1;
     position: absolute;
-    height: 150vh;
+    height: 110vh;
     width: 100vw;
     background-color: #00cb79;
+  }
+
+  h1 {
+    font-size:36px;
+    font-weight: 500;
+    line-height: 44px;
+  }
+  p {
+    color: rgba(255,255,255,0.75);
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 19px;
+    width: 403px;
   }
 }
 
