--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -57,10 +57,10 @@
   
   display: grid;
   grid-template-rows: 1fr 50px;
-  
+  background-color: white;
 
   &__inputs {
-    background-color: skyblue;
+    /* background-color: white; */
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(4, 1fr);
