--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -62,8 +62,14 @@
   &__inputs {
     /* background-color: white; */
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 27px);
     grid-template-columns: repeat(4, 1fr);
+
+    grid-row-gap: 120px;
+    margin-top: 66px;
+    margin-left: 83px;
+    margin-right: 83px;
+
     justify-items: center;
     align-items: center;
   }
@@ -72,15 +78,17 @@
 
 .input {
   display: grid;
+  grid-column-gap: 8px;
   grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
   
   font-family: 'Montserrat';
   text-align: center;
 
+  height: 47px;
+
   &__title {
     grid-column: input-s/input-e;
 
-    border-top: 1px solid #b3b3b3;
     color: #b3b3b3;
     font-size: 12px;
     font-weight: 300;
@@ -91,6 +99,14 @@
     text-align: center;
     border: none;
     font-size: 15px;
+    padding: 4px 0;
+    border-bottom: 1px solid #b3b3b3;
+    transition: all .3s ease;
+
+    &:focus {
+      outline: none;
+      border-bottom: 1px solid #00cb79;
+    }
   }
  
   &__number {
@@ -101,7 +117,8 @@
     font-size: 20px;
     line-height: 24px;
     padding-top: 1px;
+    height: 26px;
+    width: 26px;
     border-radius: 50%;
-    
   }
 }
