--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,6 +10,14 @@
   text-align: center;
 }
 
+.gray {
+  background: #b3b3b3;
+}
+
+.green {
+  background: #00cb79;
+}
+
 .home {
   position: relative;
   background-color: #cfcfcf00;
@@ -62,7 +70,7 @@
 }
 
 .card {
-  height: 736px;
+  min-height: 736px;
   width: 1240px;
   box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.1);
   border-radius: 7px;
@@ -88,6 +96,7 @@
 
   button {
     justify-self: center;
+    transform: translateY(50%);
   }
 
   button:focus {
@@ -103,6 +112,24 @@
     background-color: #45b0e5;
     @include button;
   }
+
+  &__content {
+    width: 1100px;
+    height: 297px;
+    background-color: #f2f2f2;
+
+    justify-self: center;    
+    margin-bottom: 84px;
+
+    p{
+      padding: 50px 47px;
+      font-family: 'Montserrat';
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 29px;
+    }
+  }
+
 }
 
 .input {
@@ -141,7 +168,6 @@
   &__number {
     grid-column: number-s/number-e;
     
-    background-color: #00cb79;
     color: white;
     font-size: 20px;
     line-height: 24px;
@@ -151,3 +177,4 @@
     border-radius: 50%;
   }
 }
+
