--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -71,6 +71,7 @@
 
 .card {
   min-height: 736px;
+  max-height: 994px;
   width: 1240px;
   box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.1);
   border-radius: 7px;
@@ -80,7 +81,6 @@
   background-color: white;
 
   &__inputs {
-    /* background-color: white; */
     display: grid;
     grid-template-rows: repeat(4, 27px);
     grid-template-columns: repeat(4, 1fr);
@@ -96,7 +96,6 @@
 
   button {
     justify-self: center;
-    transform: translateY(50%);
   }
 
   button:focus {
@@ -105,10 +104,12 @@
 
   &__generate {
     background-color: #00cb79;
+    transform: translateY(-300px);
     @include button;
   }
 
   &__clear {
+    transform: translateY(50%);
     background-color: #45b0e5;
     @include button;
   }
